# Calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  calculator.cpp
cli/: cli-sim.js  geoUtils.js  logger.js  simulationRunner.js  udpSender.js
src/: Calculator.cpp  Calculator.h  main.cpp
tests/: test_calculator.cpp
